<resources>
    <string name="app_name">UB二手书</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_edit_text_hint">书名、作者、出版社</string>

    <string name="bottom_bar_left_text">首页</string>
    <string name="bottom_bar_center_text">购物车</string>
    <string name="bottom_bar_right_text">个人中心</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="translate_time">300</string>
    <string name="search_btn_text">搜索</string>
    <string name="clear_search_history_btn_text">清空搜索记录</string>
    <string name="suggest_to_login_text">亲，您还没有登陆，快去登陆体验UB二手书吧！</string>
    <string name="to_login">去登陆</string>

    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="logout">退出登录</string>

    <string name="settings">设置</string>

    <string name="username_hint">手机号</string>
    <string name="password_hint">密码</string>

    <string name="go_to_register">注册新用户</string>
    <string name="forget_password">忘记密码</string>

    <string name="code">短信验证码</string>
    <string name="new_password">设置新密码，最少6位,最长16位</string>
    <string name="get_code">获取验证码</string>
    <string name="old_pwd">原密码</string>

    <string name="submit">确定</string>
    <string name="password">设置密码，最少6位,最长16位</string>
    <string name="ensure_password">确认密码</string>
    <string name="cancel">取消</string>

    <string name="mobile_no">输入手机号码，用于找回账号</string>


    <string name="order_form">我的订单</string>

    <string name="deliver">待发货</string>
    <string name="express">配送中</string>
    <string name="pay">待付款</string>
    <string name="evaluate">待评价</string>
    <string name="finish">已完成</string>

    <string name="message">我的消息</string>
    <string name="address">设置我的收货地址</string>
    <string name="setting">设置</string>
    <string name="prefer">我的收藏</string>
    <string name="user_info">编辑我的信息</string>

    <string name="book_detail">商品详情</string>

    <string name="price">售价：</string>
    <string name="percent">品相：</string>
    <string name="stock">库存：</string>

    <string name="add_shooping_cart">加入购物车</string>
    <string name="add_prefer">加入收藏夹</string>

    <string name="express_method">配送方式</string>

    <string name="author">作者：</string>
    <string name="press">出版社：</string>
    <string name="isbn">ISBN：</string>
    <string name="sales_volume">月销量：</string>
    <string name="category">上架指导：</string>

    <string name="enter_shop">进入店铺</string>
    <string name="comment">评论</string>

    <string name="chat">联系卖家</string>

    <string name="total_money">总金额：</string>

    <string name="payment">结算</string>

    <string name="number">数量：</string>
    <string name="subtotal">小计:</string>
    <string name="delete">删除</string>

    <string name="update_agent">检查更新</string>
    <string name="mobileno">手机号码</string>
    <string name="username">用户名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>

    <string name="edit_pwd">修改密码</string>

    <string name="add_new_address">新增收货地址</string>
    <string name="detail_address_hint">请输入详细地址</string>
    <string name="name_hint">请输收货人姓名</string>
    <string name="mobile_no_hint">请输入收货人联系电话</string>
    <string name="zip_code_hint">请输入邮编</string>
    <string name="edit_address">编辑收货地址</string>
    <string name="set_default_address">设为默认收货地址</string>

    <string name="positive">确定</string>
    <string name="negative">取消</string>

    <string name="default_address">[默认]</string>

    <string name="warning">警告</string>

    <string name="shopping_cart_empty">购物车空空如也，快去购物吧</string>
    <string name="prefer_empty">收藏夹空空如也，快去购物吧</string>
    <string name="stock_not_enough">库存不足</string>
    <string name="order_ensure">确认订单</string>
    <string name="this_order_empty">您暂时没有相关订单</string>
    <string name="shopping_cart_address">收货地址</string>
    <string name="book">书</string>
    <string name="order_detail">订单详情</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="publish_comment">发表评论</string>
    <string name="rating">评分</string>
    <string name="recomend_comment">动一动手指，帮助更多的人，为这世界奉献一点爱...</string>

    <string name="grade">评分：</string>
    <string name="comment_empty">暂无评论</string>
    <string name="conversaction">会话列表</string>
    <string name="search_result_empty">没有您要找的内容</string>
    <string name="system_push">系统推送消息</string>
    <string name="sys_message">系统消息</string>
    <string name="sys_message_empty">暂无系统消息</string>
    <string name="system_like">猜您喜欢</string>
    <string name="recomend">猜你喜欢</string>
    <string name="recommend_empty">暂无推荐</string>

</resources>
