<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.weiqianghu.usedbook.view.customview.ClearEditText
            android:id="@+id/et_old_pwd"
            style="@style/username_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_pwd" />

        <com.weiqianghu.usedbook.view.customview.ClearEditText
            android:id="@+id/et_new_password"
            style="@style/password_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password" />

        <com.weiqianghu.usedbook.view.customview.ClearEditText
            android:id="@+id/et_ensuer_password"
            style="@style/password_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ensure_password" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/small_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_background"
            android:text="@string/submit" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="@dimen/large_dp"
        android:layout_height="@dimen/large_dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
</RelativeLayout>
