<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_bar"></include>

    <com.weiqianghu.usedbook.view.customview.ClearEditText
        android:id="@+id/et_username"
        style="@style/username_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.weiqianghu.usedbook.view.customview.ClearEditText
        android:id="@+id/et_password"
        style="@style/password_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_login"
        android:layout_margin="10dp"
        android:text="@string/login"
        style="@style/small_text_style"
        android:background="@drawable/btn_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_goto_register"
            style="@style/link_text_style"
            android:text="@string/go_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_alignParentRight="true"
            style="@style/link_text_style"
            android:text="@string/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>
