<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/top_bar"
        android:id="@+id/top_bar">
    </include>
    <ScrollView
        android:layout_below="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v4.view.ViewPager
                    android:layout_marginBottom="10dp"
                    android:id="@+id/vp_book_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/img_height"
                    android:background="@drawable/box_bg">
                </android.support.v4.view.ViewPager>

                <TextView
                    android:id="@+id/tv_position"
                    android:layout_alignParentRight="true"
                    android:text="1/3"
                    android:gravity="center"
                    android:background="@drawable/position_tv_bg"
                    style="@style/position_text_style"
                    android:layout_width="@dimen/middle_dp"
                    android:layout_height="@dimen/middle_dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_book_name"
                android:text="计算机英语"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                style="@style/common_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/price"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_price"
                    android:text="￥299"
                    style="@style/price_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/percent"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_percent"
                    android:text="八成新"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:text="@string/stock"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_stock"
                    android:text="10件"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_margin="10dp"
                    android:background="@drawable/gray_btn_bg"
                    android:text="@string/add_prefer"
                    style="@style/small_text_style"
                    android:id="@+id/btn_prefer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_margin="10dp"
                    android:text="@string/add_shooping_cart"
                    style="@style/small_text_style"
                    android:background="@drawable/small_btn_bg"
                    android:id="@+id/btn_shopping_cart"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:background="@color/gray_bg"
                android:padding="10dp"
                android:text="@string/express_method"
                style="@style/common_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_express"
                android:text="顺丰快递"
                style="@style/common_text_style"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:background="@color/gray_bg"
                android:padding="10dp"
                android:text="@string/book_detail"
                style="@style/common_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/author"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_author"
                    android:text="June Jamrich Parsons Dan"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/press"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_press"
                    android:text="机械工业出版社"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/isbn"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_isbn"
                    android:text="978-7-111-42803-9"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/sales_volume"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_sales_volume"
                    android:text="23件"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/category"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_sales_category"
                    android:text="计算机/计算机文化"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/comment"
                android:background="@drawable/box_bg"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_centerVertical="true"
                    android:text="@string/comment"
                    style="@style/common_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="@dimen/small_dp"
                    android:layout_height="@dimen/small_dp"
                    android:src="@mipmap/enter"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_margin="10dp"
                    android:background="@drawable/small_btn_bg"
                    android:text="@string/chat"
                    style="@style/small_text_style"
                    android:id="@+id/btn_chat"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_margin="10dp"
                    android:text="@string/enter_shop"
                    style="@style/small_text_style"
                    android:background="@drawable/small_btn_bg"
                    android:id="@+id/btn_enter_shop"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/iv_shopping_cart"
        android:src="@mipmap/cart"
        android:layout_marginRight="@dimen/small_dp"
        android:layout_marginBottom="@dimen/large_dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_width="@dimen/large_dp"
        android:layout_height="@dimen/large_dp"
        android:scaleType="fitXY"/>

</RelativeLayout>

