<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_bar_height"
    android:orientation="horizontal"
    android:background="@drawable/box_bg">

    <RelativeLayout
        android:id="@+id/rl_pay"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/box_bg">
        <ImageView
            android:id="@+id/iv_pay"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/pay"/>
        <TextView
            style="@style/bottom_bar_text_style"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_deliver"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/box_bg">
        <ImageView
            android:id="@+id/iv_deliver"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/deliver"/>
        <TextView
            style="@style/bottom_bar_text_style"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deliver"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_express"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/box_bg">
        <ImageView
            android:id="@+id/iv_express"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/express"/>
        <TextView
            style="@style/bottom_bar_text_style"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/express"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_evaluate"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/box_bg">
        <ImageView
            android:id="@+id/iv_evaluate"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/evaluate"/>
        <TextView
            style="@style/bottom_bar_text_style"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluate"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_finish"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/box_bg">
        <ImageView
            android:id="@+id/iv_finish"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/finish"/>
        <TextView
            style="@style/bottom_bar_text_style"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"/>
    </RelativeLayout>


</LinearLayout>
